Just sime minor change to UI.  Removed referneces form ESPy-node to K9-node

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "NodeMCU-control",
-    "description": "integrate NodeMCU modules with home control",
+    "description": "integrate NodeMCU wit Node-Red",
     "version": "0.0.1",
     "dependencies": {},
     "node-red": {
