--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "NodeMCU-control",
-    "description": "integrate NodeMCU wit Node-Red",
+    "description": "integrate NodeMCU with Node-Red",
     "version": "0.0.1",
     "dependencies": {
         "node-red-contrib-os": "0.1.7",
